# denoize

./: .gitignore  Cargo.crates-io.toml  Cargo.toml  LICENSE  README.md  RELEASING.md  ROADMAP.md  THIRD_PARTY.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: cli.md
examples/: bench.rs  gen_noisy.rs  measure.rs
scripts/: export-bsrnn.py  export-mossformer2.py  export-mpsenet.py  export-sgmse.py  generate-cli-docs.sh  publish-crates-io.sh  validate-bsrnn.py  validate-mossformer2.py  validate-mpsenet.py  validate-sgmse.py
src/: audio.rs  benchmark.rs  bessel.rs  denoiser.rs  fft.rs  gain.rs  lib.rs  live.rs  loudness.rs  main.rs  metadata.rs  models.rs  noise.rs  perceptual.rs  postfilter.rs  resample.rs  service.rs  stft.rs  stream.rs  vad.rs  window.rs
src/backend/: bsrnn.rs  classical.rs  deepfilter.rs  gtcrn.rs  mod.rs  mossformer2.rs  mpsenet.rs  onnx.rs  rnnoise.rs  sgmse.rs
src/decode/: aac.rs  m4a.rs  mod.rs  mp3.rs  opus.rs  pcm.rs
src/encode/: aac.rs  m4a.rs  m4a_fdk.rs  mod.rs  mp3.rs  opus.rs  pcm.rs
