[package]
name = "denoize"
version = "0.3.2"
edition = "2021"
authors = ["denoize"]
description = "Pure-Rust audio denoiser for the world's highest sound quality. Classical DSP + optional RNNoise / DeepFilterNet backends."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["audio", "denoise", "dsp", "stft", "noise-reduction"]
categories = ["multimedia::audio", "science"]

[lib]
name = "denoize"
path = "src/lib.rs"

[[bin]]
name = "denoize"
path = "src/main.rs"

[dependencies]
hound = "3.5"
nnnoiseless = { version = "0.5.2", optional = true, default-features = false }
df = { git = "https://github.com/Rikorose/DeepFilterNet", tag = "v0.5.6", package = "deep_filter", optional = true, default-features = false, features = ["tract", "default-model", "wav-utils", "transforms"] }
ndarray = { version = "0.15", optional = true }
nanomp3 = "0.1.1"
shine-rs = "0.1.3"
oxideav-aac = { git = "https://github.com/OxideAV/oxideav-aac", rev = "e8113d5" }
mp4 = "0.14.0"

[features]
default = []
rnnoise = ["dep:nnnoiseless"]
deepfilter = ["dep:df", "dep:ndarray"]
full = ["rnnoise", "deepfilter"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
