[package]
name = "denoize"
version = "0.4.0"
edition = "2021"
authors = ["denoize"]
description = "Pure-Rust audio denoiser for the world's highest sound quality. Classical DSP + optional RNNoise / DeepFilterNet backends."
license = "MIT"
readme = "README.md"
repository = "https://github.com/penguin425/denoize"
homepage = "https://github.com/penguin425/denoize"
documentation = "https://docs.rs/denoize"
rust-version = "1.87"
keywords = ["audio", "denoise", "dsp", "stft", "noise-reduction"]
categories = ["multimedia::audio", "science"]

[lib]
name = "denoize"
path = "src/lib.rs"

[[bin]]
name = "denoize"
path = "src/main.rs"

[dependencies]
hound = "3.5"
nnnoiseless = { version = "0.5.2", optional = true, default-features = false }
df = { git = "https://github.com/Rikorose/DeepFilterNet", tag = "v0.5.6", package = "deep_filter", optional = true, default-features = false, features = ["tract", "default-model", "wav-utils", "transforms"] }
ndarray = { version = "0.15", optional = true }
tract-onnx = { version = "0.22.3", optional = true }
rustfft = { version = "6.4", optional = true }
kaldi-native-fbank = { version = "0.1.0", optional = true }
nanomp3 = "0.1.1"
shine-rs = "0.1.3"
oxideav-aac = "0.1.6"
oxideav-aac-encoder = { git = "https://github.com/OxideAV/oxideav-aac", rev = "e8113d5", package = "oxideav-aac", optional = true }
mp4 = "0.14.0"
rubato = "0.16.2"
sha2 = "0.10.9"
ureq = { version = "2.12.1", features = ["tls"] }
claxon = "0.4.3"
flacenc = "0.5.1"
opus = "0.3.1"
ogg = "0.9.2"
rayon = "1.11.0"
ebur128 = "0.1.10"
lofty = "0.24.0"
fdk-aac-rust = { version = "0.2.2", optional = true, default-features = false }
cpal = { version = "0.15.3", optional = true }
ctrlc = { version = "3.4.5", optional = true }

[features]
default = ["m4a-encode"]
rnnoise = ["dep:nnnoiseless"]
deepfilter = ["dep:df", "dep:ndarray"]
onnx = ["dep:tract-onnx"]
mpsenet = ["onnx", "dep:rustfft"]
bsrnn = ["onnx", "dep:rustfft"]
mossformer2 = ["onnx", "dep:rustfft", "dep:kaldi-native-fbank"]
sgmse = ["onnx", "dep:rustfft"]
gtcrn = ["onnx", "dep:rustfft"]
m4a-encode = ["dep:oxideav-aac-encoder"]
live = ["dep:cpal", "dep:ctrlc"]
fdk-aac-encoder = ["dep:fdk-aac-rust"]
full = ["rnnoise", "deepfilter", "onnx", "mpsenet", "bsrnn", "mossformer2", "sgmse", "gtcrn", "m4a-encode"]

[dev-dependencies]
prost = "0.11"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[package.metadata.docs.rs]
features = ["rnnoise", "mpsenet", "bsrnn", "mossformer2", "sgmse", "gtcrn"]
rustdoc-args = ["--cfg", "docsrs"]
